tests/fixtures/errors/invalid_unmatched_enduml.puml
@enduml
@startuml
A -> B : hi
@enduml
